Implemented Alarm fully and changed all code to match the backend teams code changes.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,13 +59,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#757C8C">
+        android:layout_height="fill_parent"
+        android:background="#4A4949">
 
         <LinearLayout
             android:id="@+id/DeviceLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             android:background="#4A4949"
             android:orientation="vertical"  />
     </ScrollView>
